--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">LigaITESOSoccer</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Liga Futbol 7 ITESO</string>
+    <string name="nav_header_subtitle">Bienvenido itesiano</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_calendario">Calendario</string>
+    <string name="menu_tablageneral">Tabla general</string>
+    <string name="menu_goleadores">Goleadores</string>
+    <string name="menu_foro">Foro</string>
+    <string name="menu_equipo">Equipo</string>
+    <string name="menu_codigo">Ingresa tu codigo</string>
 </resources>
