--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="nav_header_subtitle">Bienvenido itesiano</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
+    <string name="activity_create_tanda_fecha">Fecha</string>
     <string name="menu_calendario">Calendario</string>
     <string name="menu_tablageneral">Tabla general</string>
     <string name="menu_goleadores">Goleadores</string>
